deploy/k8s/services/api-gateway/test-eu/http/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-http
spec:
  template:
    spec:
      containers:
        - name: api-gateway
          image: api-gateway
          imagePullPolicy: Always
